--- a/index_rus.html
+++ b/index_rus.html
@@ -1659,76 +1659,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <!-- OWL CAROUSEL -->
         <div id="experts-slider" class="owl-carousel owl-theme">
 
-		
-		
-        <!--Card-->
-        <!--Card image-->
-        <div class="expert-item text-center">
-            <div class="view overlay">
-                <img src="https://media.togas.com/media/couture/img/img-togas-lp3/experts%20(6).jpg" alt="John Karantonis" class="card-img-top-tg img-fluid rounded-circle">
-                <a>
-                    <div class="mask flex-center rgba-stylish-slight rounded-circle">
-                        <p class="white-text">Джон<br>Карантонис</p>
-                    </div>
-                </a>
-            </div>
 
-            <!--Card content-->
-            <div class="card-body">
-                <!--Title-->
-                <h5 class="experts-name my-3">Джон<br/>Карантонис</h5>
-                <h6 class="subscript-center pb-3">Руководитель студии Togas Couture Interiors США</h6>
-                <p class="card-text">Более 30 лет работы в сфере текстильного дизайна – огромный опыт и творческий багаж Джона. Работая в Togas, Карантонис привносит в каждый новый проект не только уникальный стиль и внимание к малейшим нюансам, но и создает для клиентов наилучшие условия для совместного творчества.</p>
-            </div>
-        </div>
-        <!--/.Card-->
-		
-        <!--Card-->
-        <!--Card image-->
-        <div class="expert-item text-center">
-            <div class="view overlay">
-                <img src="https://media.togas.com/media/couture/img/img-togas-lp3/experts%20(13).jpg" alt="Elena Jeffrey" class="card-img-top-tg img-fluid rounded-circle">
-                <a>
-                    <div class="mask flex-center rgba-stylish-slight rounded-circle">
-                        <p class="white-text">Эллена<br>Джеффри</p>
-                    </div>
-                </a>
-            </div>
-
-            <!--Card content-->
-            <div class="card-body">
-                <!--Title-->
-                <h5 class="experts-name my-3">Эллена<br/>Джеффри</h5>
-                <h6 class="subscript-center pb-3">Директор департамента исследования и разработки </h6>
-                <p class="card-text">Эллена отвечает за новейшие разработки и креативные решения по всей выпускаемой продукции Togas. Благодаря высокому мастерству, таланту и своей увлеченности она предлагает интересные творческие идеи и выстраивает гармоничные отношения с клиентами.</p>
-            </div>
-        </div>
-        <!--/.Card-->
-
-		
-		<!--Card-->
-        <!--Card image-->
-        <div class="expert-item text-center">
-            <div class="view overlay">
-                <img src="https://media.togas.com/media/couture/img/img-togas-lp3/experts%20(7).jpg" alt="Tzanis Sifnaios" class="card-img-top-tg img-fluid rounded-circle">
-                <a>
-                    <div class="mask flex-center rgba-stylish-slight rounded-circle">
-                        <p class="white-text">Дзаннис<br>Сифнэос</p>
-                    </div>
-                </a>
-            </div>
-
-            <!--Card content-->
-            <div class="card-body">
-                <!--Title-->
-                <h5 class="experts-name my-3">Дзаннис<br>Сифнэос</h5>
-                <h6 class="subscript-center pb-3">Арт-директор</h6>
-                <p class="card-text">Немалый творческий путь – более 30 лет в интерьерном дизайне – прошел Дзаннис Сифнэос, арт-директор Togas, идейный вдохновитель оригинальных концепций и создатель авторского дизайна в сфере текстиля для дома. Дзаннис	 уверен, что для создания эксклюзивного интерьера важны две составляющие: профессиональное мастерство и внимание к деталям.</p>
-            </div>
-        </div>
-        <!--/.Card-->	
-
-		
 		<!--Card-->
         <!--Card image-->
         <div class="expert-item text-center">
@@ -1745,12 +1676,78 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <!--Title-->
                 <h5 class="experts-name my-3">Анна<br>Зезюля</h5>
                 <h6 class="subscript-center pb-3">Региональный менеджер</h6>
-                <p class="card-text">На протяжении 18 лет Анна работала в сфере домашнего текстиля как мастер декоративной вышивки, специализируясь на художественном оформлении штор, подхватов и ламбрекенов. Она также имеет большой опыт сотрудничества в этой области с первоклассными ресторанами и отелями.</p>
+                <p class="card-text">Anna has 18years' experience in home textiles. She is specialized in embroidering curtain tiebacks, bandeaus and lambrequins. She has also collaborated with high-class restaurants and hotels.</p>
             </div>
         </div>
         <!--/.Card-->
 			
+        <!--Card image-->
+        <div class="expert-item text-center">
+            <div class="view overlay">
+                <img src="https://media.togas.com/media/couture/img/img-togas-lp3/experts (2).jpg" alt="Lilia Khayrova" class="card-img-top-tg img-fluid rounded-circle">
+                <a>
+                    <div class="mask flex-center rgba-stylish-slight rounded-circle">
+                        <p class="white-text">Lilia<br>Khayrova</p>
+                    </div>
+                </a>
+            </div>
+            <!--Card content-->        
+            <div class="card-body">
+                <!--Title-->
+                <h5 class="experts-name my-3">Lila<br>Khayrova</h5>
+                <h6 class="subscript-center pb-3">head designer</h6>
+                <p class="card-text">Lila is employed at the “Sadovaya-Sukharevskaya” boutique as a Designer. Working for Togas gives her the opportunity to grow professionally as well as the chance to interact with outstanding people.</p>
+            </div>
+        </div>       
+        <!--/.Card-->
+		
+		
+        <!--Card-->
+        <!--Card image-->
+        <div class="expert-item text-center">
+            <div class="view overlay">
+                <img src="https://media.togas.com/media/couture/img/img-togas-lp3/experts (3).jpg" alt="Victoria Ivanova" class="card-img-top-tg img-fluid rounded-circle">
+                <a>
+                    <div class="mask flex-center rgba-stylish-slight rounded-circle">
+                        <p class="white-text">Виктория<br>Иванова</p>
+                    </div>
+                </a>
+            </div>
+            <!--Card content-->
+            <div class="card-body">
+                <!--Title-->
+                <h5 class="experts-name my-3">Виктория<br>Иванова</h5>
+                <h6 class="subscript-center pb-3">Ведущий дизайнер</h6>
+                <p class="card-text">Victoria has been working in Interior Design for the last 15 years. She enjoys getting involved in exciting projects as well as finding constructive ways in order to solve complex, yet creative problems.</p>
+            </div>
+        </div>
+        <!--/.Card-->
+		
+		
+		<!--Card-->
+        <!--Card image-->
+        <div class="expert-item text-center">
+            <div class="view overlay">
+                <img src="https://media.togas.com/media/couture/img/img-togas-lp3/experts (4).jpg" alt="Anna Korobko" class="card-img-top-tg img-fluid rounded-circle">
+                <a>
+                    <div class="mask flex-center rgba-stylish-slight rounded-circle">
+                        <p class="white-text">Анна<br>Коробко</p>
+                    </div>
+                </a>
+            </div>
 
+            <!--Card content-->
+            <div class="card-body">
+                <!--Title-->
+                <h5 class="experts-name my-3">Анна<br>Коробко</h5>
+                <h6 class="subscript-center pb-3">Ведущий дизайнер</h6>
+                <p class="card-text">Anna is currently employed at Togas in the position of Designer at the Sadovaya-Sukharevskaya St.  boutique. She feels that premium custom service brings a higher value to the company.</p>
+            </div>
+        </div>
+        <!--/.Card-->
+		
+
+		
         </div>
         <!-- OWL -->
 
