--- a/index_rus.html
+++ b/index_rus.html
@@ -1676,32 +1676,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <!--Title-->
                 <h5 class="experts-name my-3">Анна<br>Зезюля</h5>
                 <h6 class="subscript-center pb-3">Региональный менеджер</h6>
-                <p class="card-text">Anna has 18years' experience in home textiles. She is specialized in embroidering curtain tiebacks, bandeaus and lambrequins. She has also collaborated with high-class restaurants and hotels.</p>
+                <p class="card-text">На протяжении 18 лет Анна работала в сфере домашнего текстиля как мастер декоративной вышивки, специализируясь на художественном оформлении штор, подхватов и ламбрекенов.  Она также имеет большой опыт сотрудничества в этой области с первоклассными ресторанами и отелями.</p>
             </div>
         </div>
         <!--/.Card-->
-			
-        <!--Card image-->
-        <div class="expert-item text-center">
-            <div class="view overlay">
-                <img src="https://media.togas.com/media/couture/img/img-togas-lp3/experts (2).jpg" alt="Lilia Khayrova" class="card-img-top-tg img-fluid rounded-circle">
-                <a>
-                    <div class="mask flex-center rgba-stylish-slight rounded-circle">
-                        <p class="white-text">Lilia<br>Khayrova</p>
-                    </div>
-                </a>
-            </div>
-            <!--Card content-->        
-            <div class="card-body">
-                <!--Title-->
-                <h5 class="experts-name my-3">Lila<br>Khayrova</h5>
-                <h6 class="subscript-center pb-3">head designer</h6>
-                <p class="card-text">Lila is employed at the “Sadovaya-Sukharevskaya” boutique as a Designer. Working for Togas gives her the opportunity to grow professionally as well as the chance to interact with outstanding people.</p>
-            </div>
-        </div>       
-        <!--/.Card-->
-		
-		
+
+	
         <!--Card-->
         <!--Card image-->
         <div class="expert-item text-center">
@@ -1718,7 +1698,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <!--Title-->
                 <h5 class="experts-name my-3">Виктория<br>Иванова</h5>
                 <h6 class="subscript-center pb-3">Ведущий дизайнер</h6>
-                <p class="card-text">Victoria has been working in Interior Design for the last 15 years. She enjoys getting involved in exciting projects as well as finding constructive ways in order to solve complex, yet creative problems.</p>
+                <p class="card-text">Последние 15 лет Виктория посвятила декорированию интерьеров. Ее увлекают интересные проекты в сфере интерьерного дизайна, а также поиск наилучших решений для сложных и захватывающих творческих задач.</p>
             </div>
         </div>
         <!--/.Card-->
@@ -1741,11 +1721,31 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <!--Title-->
                 <h5 class="experts-name my-3">Анна<br>Коробко</h5>
                 <h6 class="subscript-center pb-3">Ведущий дизайнер</h6>
-                <p class="card-text">Anna is currently employed at Togas in the position of Designer at the Sadovaya-Sukharevskaya St.  boutique. She feels that premium custom service brings a higher value to the company.</p>
+                <p class="card-text">С 2013 года Анна работает дизайнером в одном из флагманских бутиков Togas на Садово-Сухаревской улице. Взаимодействуя с заказчиками, помогая им в   оформлении интерьеров текстилем, Анна уверена, что реноме компании зависит от безупречного качества работы дизайнеров, высочайшего уровня сервиса и индивидуального подхода к каждому клиенту.</p>
             </div>
         </div>
         <!--/.Card-->
+
 		
+        <!--Card image-->
+        <div class="expert-item text-center">
+            <div class="view overlay">
+                <img src="https://media.togas.com/media/couture/img/img-togas-lp3/experts (2).jpg" alt="Lilia Khayrova" class="card-img-top-tg img-fluid rounded-circle">
+                <a>
+                    <div class="mask flex-center rgba-stylish-slight rounded-circle">
+                        <p class="white-text">Лилия<br>Хайрова</p>
+                    </div>
+                </a>
+            </div>
+            <!--Card content-->        
+            <div class="card-body">
+                <!--Title-->
+                <h5 class="experts-name my-3">Лилия<br>Хайрова</h5>
+                <h6 class="subscript-center pb-3">Ведущий дизайнер</h6>
+                <p class="card-text">Лилия – дизайнер в бутике на Садово-Сухаревской улице. Работа в Togas дает ей возможность не только профессионально расти и развиваться, но и знакомиться, взаимодействовать и сотрудничать с интересными людьми.</p>
+            </div>
+        </div>       
+        <!--/.Card-->
 
 		
         </div>
