--- a/index_rus.html
+++ b/index_rus.html
@@ -1721,7 +1721,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <!--Title-->
                 <h5 class="experts-name my-3">Анна<br>Коробко</h5>
                 <h6 class="subscript-center pb-3">Ведущий дизайнер</h6>
-                <p class="card-text">С 2013 года Анна работает дизайнером в одном из флагманских бутиков Togas на Садово-Сухаревской улице. Взаимодействуя с заказчиками, помогая им в   оформлении интерьеров текстилем, Анна уверена, что реноме компании зависит от безупречного качества работы дизайнеров, высочайшего уровня сервиса и индивидуального подхода к каждому клиенту.</p>
+                <p class="card-text">С 2013 года Анна работает дизайнером в бутике Togas на Садово-Сухаревской улице. Взаимодействуя с заказчиками, помогая им в оформлении интерьеров текстилем, Анна уверена, что реноме компании зависит от безупречного качества работы дизайнеров и высочайшего уровня клиентского сервиса.</p>
             </div>
         </div>
         <!--/.Card-->
