hide testemonials block

--- a/index_rus.html
+++ b/index_rus.html
@@ -1763,7 +1763,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
 <!-- SECTION "TESTEMONIALS" -->
-    <section id="testemonials">
+  <!---  <section id="testemonials">
         <div class="container-fluid bg-section-black pt-5 pb-4">
 
             <div class="container pt-5 align-items-center text-center">
@@ -1789,7 +1789,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
         </div>
         <!-- /container-fluid bg-section-black -->
-    </section>
+    <!--</section>-->
 <!-- /SECTION "TESTEMONIALS" -->
 
 <!-- SECTION CONTACT INFO -->
