--- a/index.html
+++ b/index.html
@@ -1124,12 +1124,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	</div>
 	</div>
 
-<div class="container-fluid  bg-dark-grey">
+<div class="container-fluid bg-dark-grey">
     <div class="container py-5">	
 		<!-- Row2 ::catalog-download -->
-		<div class="row">
+		<div class="row align-items-center">
 			<div class = "col-xs-12 col-sm-12 col-md-8 d-flex justify-content-center "><h3 class = "txt-catalog">Discover the Custom-Made 2018 Togas Collection</h3></div>
-			<div class = "col-xs-12 col-sm-12 col-md-4 d-flex justify-content-center " ><button type = "button" class = "btn btn-fill-bronze waves-effect waves-light catalog-button" onclick = "window.open('https://media.togas.com/media/wysiwyg/couture/COUTURE_INTERNATIONAL_2018_web.pdf')">Download Catalogue</div>
+			<div class = "col-xs-12 col-sm-12 col-md-4 d-flex  justify-content-center mt-sm-4 mt-md-0" ><button type = "button" class = "btn btn-fill-bronze waves-effect waves-light catalog-button" onclick = "window.open('https://media.togas.com/media/wysiwyg/couture/COUTURE_INTERNATIONAL_2018_web.pdf')">Download Catalogue</div>
 		</div>
 		<!-- row -->
 	</div>
