--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <link rel="stylesheet" href="https://media.togas.com/media/couture/css/owlcarousel/owl.theme.default.css">
 
     <!-- Style for v-2 -->
-    <link href="https://media.togas.com/media/couture/css/style-togas-lp-v2.css" rel="stylesheet">
+    <link href="css/style-togas-lp-v2.css" rel="stylesheet">
 
     <!-- Your custom styles (optional) -->
-    <link href="https://media.togas.com/media/couture/css/styles.css?v=4" rel="stylesheet">
+    <link href="css/styles.css?v=4" rel="stylesheet">
 
 	<!-- fotorama.css & fotorama.js. -->
 <link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
