--- a/index_rus.html
+++ b/index_rus.html
@@ -300,11 +300,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <img src="https://media.togas.com/media/couture/img/img-togas-lp3/create2.jpg" alt="Custom-made" class="img-fluid d-block d-md-none w-50 my-4 float-left float-md-none pr-3 pr-sm-5">
                 <p class="text-justify txt-p py-4">Интерьерные решения от Togas Couture – это роскошь, безупречный стиль и индивидуальный подход к каждому клиенту. Мы создаем уникальные изделия, помогаем найти идеальный дизайн при декорировании интерьеров текстилем.</p> 
                 <p class="text-justify txt-p bullets">почти 100-летний опыт работы с эксклюзивными тканями</p>
-				<p class="text-justify txt-p bullets">европейские традиции качества и технологии</p>
-				<p class="text-justify txt-p bullets">более 25 лет на российском рынке домашнего текстиля</p>
-				<p class="text-justify txt-p bullets">эксклюзивные дизайны и уникальные ткани, несколько тысяч в наличии на складе</p>
-				<p class="text-justify txt-p bullets">изысканные аксессуары и предметы декора</p>
-				<p class="text-justify txt-p bullets">более 100 бутиков по всей России</p>
+				<p class="text-justify txt-p bullets">Европейские традиции качества и технологии</p>
+				<p class="text-justify txt-p bullets">Более 25 лет на российском рынке домашнего текстиля</p>
+				<p class="text-justify txt-p bullets">Эксклюзивные дизайны и уникальные ткани, несколько тысяч в наличии на складе</p>
+				<p class="text-justify txt-p bullets">Изысканные аксессуары и предметы декора</p>
+				<p class="text-justify txt-p bullets">Более 100 бутиков по всей России</p>
                 <p class="text-justify txt-p pb-4">Мы активно сотрудничаем с архитекторами и дизайнерами, поставляем высококачественный текстиль в лучшие европейские отели и рестораны. С помощью тканей и аксессуаров от Togas Couture были оформлены тысячи интерьеров и разработаны сотни оригинальных авторских проектов.</p>
         </div>
         <div class="col-md-4 flex-column align-items-end mt-5 pl-5 pl-sm-3">
