--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="card-body">
                     <!--Title-->
                     <h3 class="card-title service-title py-3">Shades</h3>
-                    <p class="txt-sub-cm">roller shades / roller shades / solar shades /<br/>woven wood  shades / bamboo /<br/>cellular shades / honeycomb /<br/>pleated shades / austrian shades /<br/> balloon shades / sheer shades</p>
+                    <p class="txt-sub-cm">roller shades / solar shades /<br/>woven wood  shades / bamboo /<br/>cellular shades / honeycomb /<br/>pleated shades / austrian shades /<br/> balloon shades / sheer shades</p>
                     <!--Button-->
 					 <div class="button-wrapper" style = "margin-top: 1.55rem;">
                         <button type="button" id = "button-shades" class="btn btn-outline-bronze-cm mt-4 waves-effect waves-light show-bind-button" data-toggle="collapse" onclick="shadesCollapse();" aria-expanded="false" aria-controls="collapseShades" data-element="#bind-button-shades">Discover</button>
@@ -2626,7 +2626,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
         <div class="row">
             <div class="col-12">
-                <img src="https://media.togas.com/media/couture/img/img-togas-lp3/vendors-1200.jpg?ver=22" class="img-fluid" alt="Our selected vendors" width="">
+                <img src="https://media.togas.com/media/couture/img/img-togas-lp3/vendors-1200.jpg?ver=23" class="img-fluid" alt="Our selected vendors" width="">
             </div>
         </div>
 
