--- a/index_rus.html
+++ b/index_rus.html
@@ -900,7 +900,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="card-body">
                     <!--Title-->
                     <h3 class="card-title service-title py-3">Шторы<br/>на заказ</h3>
-                    <p class="txt-sub-cm">Текстильный декор украшает окна<br/>так же, как изысканные аксессуары<br/>подчеркивают красоту платья.</p>
+                    <p class="txt-sub-cm">Классические портьеры и тюли / римские и австрийские шторы / модели на люверсах / рулонные шторы / горизонтальные и вертикальные жалюзи</p>
                     <!--Button-->
                     <div class="button-wrapper">
                         <button type="button" id = "button-draps" class="btn btn-outline-bronze-cm mt-4 show-bind-button" data-toggle="collapse" onclick = "drapsCollapse();" aria-expanded="false" aria-controls="collapseDraps" data-element="#bind-button-draps">Подробнее</button>
@@ -991,7 +991,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="card-body">
                     <!--Title-->
                     <h3 class="card-title service-title py-3">Покрывала</h3>
-                    <p class="txt-sub-cm"> Стильное покрывало, созданное<br/>специально для вас, – это комфорт,<br/>практичность и красота вашей спальни.</p>
+                    <p class="txt-sub-cm">Покрывала и комплекты покрывал с подушками / натуральные и искусственные ткани / разнообразные орнаменты / любые виды отделки и драпировки</p>
                     <!--Button-->
 					 <div class="button-wrapper" style = "margin-top:0.65rem;">
                         <button type="button" id = "button-bedcovers" class="btn btn-outline-bronze-cm mt-4 waves-effect waves-light show-bind-button" data-toggle="collapse" onclick="bedcoversCollapse();" aria-expanded="false" aria-controls="collapseBedcovers" data-element="#bind-button-bedcovers">Подробнее</button>
@@ -1082,7 +1082,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="card-body">
                     <!--Title-->
                     <h3 class="card-title service-title py-3">ИЗГОЛОВЬЯ</h3>
-                    <p class="txt-sub-cm">Мягкие изголовья<br/>по индивидуальному заказу<br/>из роскошной коллекции тканей Togas</p>
+                    <p class="txt-sub-cm">Персональный подход / тонкая ручная работа / индивидуальный подбор фурнитуры и декора</p>
                     
                      <!--Button-->
                      <div class="button-wrapper" style = "margin-top:1.55rem">
@@ -1502,7 +1502,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="card-body">
                     <!--Title-->
                     <h3 class="card-title service-title py-3">НАШИ ДИЗАЙНЕРЫ</h3>
-                    <p class="txt-sub-cm">Творческие возможности</br>наших искусных мастеров<br/>практически безграничны</p>
+                    <p class="txt-sub-cm">Профессиональные консультации / бесплатный выезд дизайнера / создание проектов любой сложности</p>
                     
                      <!--Button-->
                     <div class="button-wrapper" style = "margin-top:0.4rem">
@@ -1589,7 +1589,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="card-body">
                     <!--Title-->
                     <h3 class="card-title service-title py-3">ОБИВОЧНЫЕ ТКАНИ</h3>
-                    <p class="txt-sub-cm">Великолепные обивочные ткани –<br/>нотки роскоши и неповторимого<br/>интерьерного стиля</p>
+                    <p class="txt-sub-cm">Для всех типов мягкой мебели / дополнительные чехлы и подушки для диванов и кресел / текстильные изголовья / комплекты мягкой мебели для веранд и патио</p>
                     <!--Button-->
                     <div class="button-wrapper">
                         <button type="button" id = "button-upholstery" class="btn btn-outline-bronze-cm mt-4 show-bind-button" data-toggle="collapse" onclick = "upholsteryCollapse();" aria-expanded="false" aria-controls="collapseUpholstery" data-element="#bind-button-upholstery">Подробнее</button>
@@ -1679,7 +1679,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="card-body">
                     <!--Title-->
                     <h3 class="card-title service-title py-3">B2B</h3>
-                    <p class="txt-sub-cm">Вы – профессионал в интерьерном<br/>дизайне? Отличные условия для <br/>архитекторов и дизайнеров!</p>
+                    <p class="txt-sub-cm">Архитекторам и дизайнерам / профессионалам в области гостиничного и ресторанного бизнеса / текстиль для отелей и ресторанов / программа лояльности</p>
                     <!--Button-->
                     <div class="button-wrapper" style = "margin-top:0.5rem">
                         <button type="button" id = "button-b2b" class="btn btn-outline-bronze-cm mt-4 show-bind-button" data-toggle="collapse" onclick = "b2bCollapse();" aria-expanded="false" aria-controls="collapseB2b" data-element="#bind-button-b2b">Подробнее</button>
@@ -2774,7 +2774,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="card-body">
                 <!--Title-->
                 <h5 class="experts-name my-3">Анна<br>Зезюля</h5>
-                <h6 class="subscript-center pb-3">Региональный менеджер</h6>
+                <h6 class="subscript-center pb-3">Ведущий дизайнер</h6>
                 <p class="card-text">На протяжении 18 лет Анна работала в сфере домашнего текстиля как мастер декоративной вышивки, специализируясь на художественном оформлении штор, подхватов и ламбрекенов.  Она также имеет большой опыт сотрудничества в этой области с первоклассными ресторанами и отелями.</p>
             </div>
         </div>
